cust/wfdf/ultiorganizer.css
body {
	background-color: #afafaf;
	font-family: Verdana, Arial, Tahoma, Helvetica, sans-serif;
	font-size: 11px;
	line-height: 1.4;
	margin: 0;
}

p {
	color: #000000;
	font-size: 10px;
	text-align: left;
	text-decoration: none;
}

h1 {
	color: #000000;
	font-size: 10pt;
	line-height: 12pt;
	font-weight: bold;
	text-transform: uppercase;
}

h2 {
	color: #000000;
	font-size: 9pt;
	line-height: 12pt;
	font-weight: bold;
	padding-top: 5px;
}

h3 {
	color: #000000;
	font-size: 8pt;
	line-height: 10pt;
	font-weight: bold;
	padding-top: 5px;
}

h4 {
	color: #000000;
	font-size: 8pt;
	text-align: left;
	text-decoration: none;
	font-weight: bold;
	vertical-align: bottom;
	font-variant: small-caps;
}

a:link,
a:visited {
	color: #004466;
	font-size: 10px;
	text-align: left;
	text-decoration: none;
}

a:hover,
a:focus {
	text-decoration: underline;
}

input {
	font-size: 10px;
}

button {
	cursor: pointer;
	font-size: 10px;
}

a.button {
	-webkit-appearance: button;
	-moz-appearance: button;
	appearance: button;
	text-decoration: none;
	color: initial;
	white-space: nowrap;
}

.commentmeta {
	margin-top: 4px;
	font-size: 80%;
	color: #666666;
}

table {
	border-collapse: collapse;
	margin: 5px;
	padding: 1px;
}

th {
	color: #ffffff;
	font-size: 10px;
	text-align: left;
	text-decoration: none;
	background-color: #006699;
}

th a:link,
th a:visited {
	color: #ffffff;
	font-size: 10px;
	text-align: left;
	text-decoration: underline;
}

td {
	color: #000000;
	font-size: 10px;
	text-align: left;
	text-decoration: none;
}

.page {
	width: 860px;
	border: 1px solid #333;
	margin-left: auto;
	margin-right: auto;
	overflow: visible;
	padding-right: 25px;
	padding-top: 0px;
	padding-bottom: 25px;
	background-color: #FFFFFF;
}

.mobile_page {
	width: 300px;
	border: 1px solid #333;
	margin-left: auto;
	margin-right: auto;
	overflow: visible;
	padding-right: 25px;
	padding-left: 25px;
	padding-top: 0px;
	padding-bottom: 25px;
	background-color: #FFFFFF;
}

.page_top {
	width: 100%;
	padding: 0px;
	padding-right: 0px;
	height: 60px;
	border-bottom: 1px dashed #333;
	/*background-color: #afafaf;*/
}

.top_banner_space {
	height: 0px;
}

.page_middle {
	width: 100%;
	clear: both;
}

.page_bottom {
	width: 100%;
}

.navigation_bar {
	width: 95%;
	height: 16px;
	margin-top: 0px;
	margin-left: 5px;
	margin-right: 0px;
	padding-top: 0px;
	padding-bottom: 0px;
	padding-right: 0px;
	padding-left: 0px;
	/*background-color: #E0E0E0;*/
	/*border-top: solid #EEEEDD 1px; */
	/*border-bottom: solid #000000 1px; */
	/*border-left: solid #EEEEDD 1px; */
	/*border-right: solid #000000 1px;*/
	/*margin-bottom: 2px;*/
}

.logo {
	border: 0;
	vertical-align: middle;
	text-align: center;
	/*width:100px;*/
	/*height:114px;*/
	margin: 5px;
}

.menu_left {
	vertical-align: top;
	/*background-color: #5E9DC8;*/
	width: 175px;
}

.menu_left table {
	margin: 0 0 5px 0;
}

.menu_button {
	display: none;
}

.topheader_auth_mobile {
	display: none;
}

.menu_close_button {
	display: none;
}

@media only screen and (max-width: 768px) {
	.menu_left {
		display: none;
		position: fixed;
		top: 60px;
		left: 0;
		bottom: 0;
		width: 220px;
		max-width: 85vw;
		padding: 8px;
		background-color: rgba(0, 0, 0, 0.8);
		overflow-y: auto;
		z-index: 1000;
	}

	.menu_left.menu_open {
		display: block;
	}

	.menu_close_button {
		display: block;
		position: absolute;
		top: 4px;
		right: 4px;
		width: 16px;
		height: 16px;
		margin: 0;
		padding: 0;
		border: 0;
		background-color: transparent;
		color: #ffffff;
		font-size: 14px;
		line-height: 16px;
		text-align: center;
		z-index: 1;
	}

	.menu_left .seasondropdown {
		position: relative;
		z-index: 2;
	}

	.menu_button {
		display: inline-block;
		width: 30px;
		padding: 5px 20px 0px 25px;
	}

	.topheader_auth_inline {
		display: none;
	}

	.topheader_auth_mobile {
		display: inline;
	}

}

.leftmenulinks {
	float: left;
	text-align: left;
	vertical-align: top;
	background-color: #ACD1E9;
	width: 175px;
	border-top: solid #EEEEDD 1px;
	border-bottom: solid #464646 1px;
	border-left: solid #EEEEDD 1px;
	border-right: solid #464646 1px;
}

.leftmenulinks_plain {
	float: left;
	text-align: left;
	vertical-align: top;
	background-color: transparent;
	width: 195px;
	margin: 0 0 5px 0;
	padding: 0;
	border: 0;
	border-collapse: separate;
	border-spacing: 0;
}

.topheader_right {
	/*background-image: url("header_right.jpg");*/
	/*background-repeat:repeat-x;*/
	vertical-align: top;
	padding-top: 0px;
	padding-right: 10px;
	width: 200px;
}

.topheader_left {
	/*width: 503px;*/
}

.tdcontent {
	/*border-left: solid #598788 4px;*/
}

.content {
	width: 635px;
	height: 100%;
	margin: 0px;
	margin-left: 5px;
	margin-right: 5px;
	background-color: #ffffff;
	padding-right: 0px;
	padding-left: 5px;
	padding-top: 5px;
	/*border:1px solid #333;*/
}

.header_text:link,
.header_text:visited,
.header_text:active,
.header_text:hover,
.header_text:focus {
	color: #006699;
	font-size: 18pt;
	/*padding-left:10px;*/
	font-weight: normal;
	text-decoration: none;
	text-transform: uppercase;
}

.header_text_small:link,
.header_text_small:visited,
.header_text_small:active,
.header_text_small:hover,
.header_text_small:focus {
	color: #006699;
	font-size: 12pt;
	padding-left: 10px;
	font-weight: normal;
	text-decoration: none;
}

.seasondropdown {
	width: 175px;
	background-color: #eeeeee;
	color: #004466;
	font-size: 12px;
	border-top: solid #EEEEDD 1px;
	border-bottom: solid #464646 1px;
	border-left: solid #EEEEDD 1px;
	border-right: solid #464646 1px;
}

.seasonnav:link,
.seasonnav:visited {
	font-size: 10pt;
	font-weight: bold;
	text-align: center;
	color: #ffffff;
	text-decoration: underline;
	/*background-color: #fe7f02;*/
	text-transform: uppercase;
	display: block;
}

.seasonnav:active,
.seasonnav:hover,
.seasonnav:focus {
	text-decoration: none;
	font-weight: normal;
}
/* ... */

